--- a/artifacts/output/rq4.tex
+++ b/artifacts/output/rq4.tex
@@ -3,34 +3,35 @@ N & Property & Vanilla & Improved & Overhead \\
 \hline
 \multicolumn{5}{c}{convex} \\
 \hline
-1 & message & 34.77 ± 1.64 & 30.47 ± 0.38 & 0.88 \\
-2 & data & 38.74 ± 0.61 & nan & nan \\
-3 & primitive & 35.96 ± 0.68 & nan & nan \\
-\textbf{} & \textbf{Average} & \textbf{36.49} & \textbf{30.47} & \textbf{0.88} \\
+1 & data & 38.90 ± 0.58 & nan & nan \\
+2 & message & 35.27 ± 0.62 & 30.69 ± 0.63 & 0.87 \\
+3 & primitive & 35.46 ± 0.52 & nan & nan \\
+\textbf{} & \textbf{Average} & \textbf{36.54} & \textbf{30.69} & \textbf{0.87} \\
 \hline
 \multicolumn{5}{c}{jflex} \\
 \hline
-4 & addSingleton & 34.23 ± 0.41 & 42.42 ± 0.78 & 1.24 \\
-5 & contains & 34.49 ± 0.62 & 34.19 ± 0.53 & 0.99 \\
-6 & addSet & 34.59 ± 0.61 & 44.08 ± 1.07 & 1.27 \\
-7 & add & 34.39 ± 0.61 & 34.11 ± 0.91 & 0.99 \\
-8 & remove & 34.54 ± 0.75 & 34.27 ± 0.41 & 0.99 \\
-9 & addString & 34.74 ± 0.52 & 42.38 ± 1.16 & 1.22 \\
-10 & addSingle & 34.08 ± 0.60 & 44.07 ± 0.85 & 1.29 \\
-\textbf{} & \textbf{Average} & \textbf{34.44} & \textbf{39.36} & \textbf{1.14} \\
+4 & addSingleton & 34.73 ± 0.42 & 41.92 ± 0.78 & 1.21 \\
+5 & contains & 34.34 ± 0.95 & 34.68 ± 0.86 & 1.01 \\
+6 & addSet & 34.49 ± 1.07 & 44.75 ± 0.94 & 1.30 \\
+7 & add & 34.60 ± 0.35 & 34.26 ± 0.45 & 0.99 \\
+8 & remove & 34.29 ± 0.68 & 34.10 ± 0.80 & 0.99 \\
+9 & addString & 34.04 ± 0.42 & 41.76 ± 1.04 & 1.23 \\
+10 & addSingle & 34.34 ± 1.04 & 44.63 ± 1.17 & 1.30 \\
+\textbf{} & \textbf{Average} & \textbf{34.40} & \textbf{39.44} & \textbf{1.15} \\
 \hline
 \multicolumn{5}{c}{mph-table} \\
 \hline
-11 & list & 10.06 ± 0.24 & 21.03 ± 4.09 & 2.09 \\
-\textbf{} & \textbf{Average} & \textbf{10.06} & \textbf{21.03} & \textbf{2.09} \\
+11 & list & 10.07 ± 0.23 & 20.72 ± 3.13 & 2.06 \\
+12 & naive & 10.07 ± 0.23 & 217.94 ± 15.96 & 21.64 \\
+\textbf{} & \textbf{Average} & \textbf{10.07} & \textbf{119.33} & \textbf{11.85} \\
 \hline
 \multicolumn{5}{c}{rpki-commons} \\
 \hline
-12 & claiming & 24.55 ± 0.38 & nan & nan \\
-13 & aspa & 22.69 ± 0.30 & nan & nan \\
-14 & resources & 23.54 ± 0.35 & 26.26 ± 0.32 & 1.12 \\
-15 & roa & 22.90 ± 0.59 & nan & nan \\
-16 & manifest & 22.54 ± 0.46 & nan & nan \\
-17 & loose & 24.57 ± 0.26 & nan & nan \\
-\textbf{} & \textbf{Average} & \textbf{23.46} & \textbf{26.26} & \textbf{1.12} \\
+13 & claiming & 24.51 ± 0.35 & nan & nan \\
+14 & aspa & 22.85 ± 0.33 & nan & nan \\
+15 & resources & 23.45 ± 0.36 & 25.77 ± 0.39 & 1.10 \\
+16 & roa & 22.52 ± 0.38 & nan & nan \\
+17 & manifest & 22.78 ± 0.38 & nan & nan \\
+18 & loose & 24.60 ± 0.45 & nan & nan \\
+\textbf{} & \textbf{Average} & \textbf{23.45} & \textbf{25.77} & \textbf{1.10} \\
 \end{tabular}
