--- a/artifacts/output/rq4.tex
+++ b/artifacts/output/rq4.tex
@@ -19,13 +19,13 @@ N & Property & Vanilla & Improved & Overhead \\
 10 & addSingle & 34.34 ± 1.04 & 44.63 ± 1.17 & 1.30 \\
 \textbf{} & \textbf{Average} & \textbf{34.40} & \textbf{39.44} & \textbf{1.15} \\
 \hline
-\multicolumn{5}{c}{\mph-table} \\
+\multicolumn{5}{c}{\mphtable} \\
 \hline
 11 & list & 10.07 ± 0.23 & 20.72 ± 3.13 & 2.06 \\
 12 & naive & 10.07 ± 0.23 & 217.94 ± 15.96 & 21.64 \\
 \textbf{} & \textbf{Average} & \textbf{10.07} & \textbf{119.33} & \textbf{11.85} \\
 \hline
-\multicolumn{5}{c}{\rpki-commons} \\
+\multicolumn{5}{c}{\rpkicommons} \\
 \hline
 13 & claiming & 24.51 ± 0.35 & nan & nan \\
 14 & aspa & 22.85 ± 0.33 & nan & nan \\
