--- a/artifacts/output/rq4.tex
+++ b/artifacts/output/rq4.tex
@@ -1,37 +1,32 @@
-\begin{tabular}{lllll}
-N & Property & Vanilla & Improved & Overhead \\
+\begin{tabular}{llll}
+Property & Vanilla & Improved & Overhead \\
 \hline
-\multicolumn{5}{c}{\convex} \\
+\multicolumn{4}{c}{\convex} \\
 \hline
-1 & data & 38.90 ± 0.58 & nan & nan \\
-2 & message & 35.27 ± 0.62 & 30.69 ± 0.63 & 0.87 \\
-3 & primitive & 35.46 ± 0.52 & nan & nan \\
-\textbf{} & \textbf{Average} & \textbf{36.54} & \textbf{30.69} & \textbf{0.87} \\
+primitive & 35.46 ± 0.47 & - & - \\
+message & 34.35 ± 2.35 & 30.69 ± 0.63 & 0.89 \\
+data & 38.70 ± 0.46 & - & - \\
+\textbf{Average} & \textbf{36.17} & \textbf{30.69} & \textbf{0.89} \\
 \hline
-\multicolumn{5}{c}{\jflex} \\
+\multicolumn{4}{c}{\jflex} \\
 \hline
-4 & addSingleton & 34.73 ± 0.42 & 41.92 ± 0.78 & 1.21 \\
-5 & contains & 34.34 ± 0.95 & 34.68 ± 0.86 & 1.01 \\
-6 & addSet & 34.49 ± 1.07 & 44.75 ± 0.94 & 1.30 \\
-7 & add & 34.60 ± 0.35 & 34.26 ± 0.45 & 0.99 \\
-8 & remove & 34.29 ± 0.68 & 34.10 ± 0.80 & 0.99 \\
-9 & addString & 34.04 ± 0.42 & 41.76 ± 1.04 & 1.23 \\
-10 & addSingle & 34.34 ± 1.04 & 44.63 ± 1.17 & 1.30 \\
-\textbf{} & \textbf{Average} & \textbf{34.40} & \textbf{39.44} & \textbf{1.15} \\
+remove & 35.00 ± 1.05 & 34.10 ± 0.80 & 0.97 \\
+addSet & 34.34 ± 0.63 & 44.75 ± 0.94 & 1.30 \\
+add & 34.36 ± 0.63 & 34.26 ± 0.45 & 1.00 \\
+addSingle & 34.34 ± 0.63 & 44.63 ± 1.17 & 1.30 \\
+contains & 34.37 ± 0.66 & 34.68 ± 0.86 & 1.01 \\
+addSingleton & 34.50 ± 0.63 & 41.92 ± 0.78 & 1.22 \\
+addString & 34.39 ± 0.68 & 41.76 ± 1.04 & 1.21 \\
+\textbf{Average} & \textbf{34.47} & \textbf{39.44} & \textbf{1.14} \\
 \hline
-\multicolumn{5}{c}{\mphtable} \\
+\multicolumn{4}{c}{\mphtable} \\
 \hline
-11 & list & 10.07 ± 0.23 & 20.72 ± 3.13 & 2.06 \\
-12 & naive & 10.07 ± 0.23 & 217.94 ± 15.96 & 21.64 \\
-\textbf{} & \textbf{Average} & \textbf{10.07} & \textbf{119.33} & \textbf{11.85} \\
+list & 10.36 ± 0.46 & 20.72 ± 3.13 & 2.00 \\
+naive & 10.36 ± 0.46 & 217.94 ± 15.96 & 21.04 \\
+\textbf{Average} & \textbf{10.36} & \textbf{119.33} & \textbf{11.52} \\
 \hline
-\multicolumn{5}{c}{\rpkicommons} \\
+\multicolumn{4}{c}{\rpkicommons} \\
 \hline
-13 & claiming & 24.51 ± 0.35 & nan & nan \\
-14 & aspa & 22.85 ± 0.33 & nan & nan \\
-15 & resources & 23.45 ± 0.36 & 25.77 ± 0.39 & 1.10 \\
-16 & roa & 22.52 ± 0.38 & nan & nan \\
-17 & manifest & 22.78 ± 0.38 & nan & nan \\
-18 & loose & 24.60 ± 0.45 & nan & nan \\
-\textbf{} & \textbf{Average} & \textbf{23.45} & \textbf{25.77} & \textbf{1.10} \\
+resources & 23.41 ± 0.60 & 25.77 ± 0.39 & 1.10 \\
+\textbf{Average} & \textbf{23.41} & \textbf{25.77} & \textbf{1.10} \\
 \end{tabular}
